# heshtool

./: .gitignore  .gitmodules  CMakeLists.txt  app.cpp  build.sh
templates/T_cmake/: T_.gitignore  T_CMakeLists.txt  T_build.sh
templates/T_cmake/T_.vscode/: T_launch.json  T_settings.json  T_tasks.json
templates/cmake/: .gitignore  app.cpp  build.sh
templates/cp/: repo.txt
